--- a/templates/solita_jenkins_security_realm.groovy.j2
+++ b/templates/solita_jenkins_security_realm.groovy.j2
@@ -19,6 +19,7 @@ if (solita_jenkins_security_realm == 'jenkins') {
 
     if (!('solita_jenkins' in currentUsers)) {
         def user = jenkins.getSecurityRealm().createAccount('solita_jenkins', '{{ solita_jenkins_password }}')
+        user.addProperty(new UserPropertyImpl('{{ solita_jenkins_public_key }}'));
         user.save()
 
         jenkins.getAuthorizationStrategy().add(Jenkins.ADMINISTER, 'solita_jenkins')
